# cacheia

./: .gitignore  README.md
.github/workflows/: publish.yml
api/: README.md  pyproject.toml
api/cacheia_api/: __main__.py  routes.py  schemas.py  settings.py
api/cacheia_api/app/: __init__.py  routes.py  utils.py
api/tests/: test_mongo.py  utils.py
client/: README.md  pyproject.toml
client/cacheia_client/: __init__.py  client.py
core/: README.md  pyproject.toml
core/cacheia/: __init__.py  cache.py  decorator.py  exceptions.py  schemas.py  settings.py  utils.py
core/cacheia/backends/: __init__.py  interface.py  memory.py  mongo.py
core/cacheia/clients/: __init__.py  interface.py  memory_client.py  mongo_client.py
core/tests/: conftest.py  templates.py  test_local.py  utils.py
decorators/: README.md  pyproject.toml
decorators/cacheia_decorator/: plain.py  utils.py
middleware/: pyproject.toml
schemas/: README.md  pyproject.toml
schemas/cacheia_schemas/: __init__.py
