[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project]
name = "cacheia_api"
authors = [ { name = "TeiaLabs", email = "contato@teialabs.com" } ]
description = "FastAPI based API for cache service that allows invalidation and other shenanigans"
readme = "README.md"
requires-python= ">=3.12"
keywords = ["api", "cache", "fastapi", "middleware"]
dynamic = ["version"]
dependencies = [
    "fastapi>=0.105",
    "pymongo",
    "boto3",
    "pydantic>2",
    "pydantic-settings",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest"
]
local = [ 
    "./core",
    "./schemas"
]
remote = [ 
    "cacheia@git+ssh://git@github.com/TeiaLabs/cacheia.git#subdirectory=core",
    "cacheia_schemas@git+ssh://git@github.com/TeiaLabs/cacheia.git#subdirectory=schemas"
]