[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
root = "../"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[project]
name = "cacheia_decorators"
authors = [{ name = "TeiaLabs", email = "contato@teialabs.com" }]
description = "Decorates for Cacheia library that allows invalidation and other shenanigans"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["cache", "decorator", "method"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black>=24,<25", "isort>=5,<6", "pytest>=8,<9"]
local = [
    "cacheia@git+ssh://git@github.com/TeiaLabs/cacheia.git#subdirectory=core",
]
remote = [
    "cacheia_client@git+ssh://git@github.com/TeiaLabs/cacheia.git#subdirectory=client",
]
schemas = [
    "cacheia_schemas@git+ssh://git@github.com/TeiaLabs/cacheia.git#subdirectory=schemas",
]
